<resources>
    <string name="app_name">Doa &amp; Dzikir App</string>

    <string name="txt_judul_fitur">Kumpulan Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qauliyah">Sunnah-Sunnah Qauliyah \nDzikir &amp; Doa Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setiap Saat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>

    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>

    <string name="txt_artikel_islami">Artikel Islami</string>

    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
    </string-array>


</resources>